# python-project-50

./: .gitignore  2th_simple.cost  Makefile  README.md  pr2json.cost  pyproject.toml  setup.cfg  w.cost
.github/workflows/: bykoff.yml  python-app.yml
gendiff/: __init__.py  generate_diff.py
gendiff/formatters/: formatted_diff.py  gpt.py  json.py  json_format.py  plain.py  plain_format.py  stylish.py  stylish_format.py
gendiff/scripts/: gendiff.py
gendiff/stuff/: arg_pars.py  diff_build.py  file2.json  gendiff_mod.py  gendiff_mod111.py  parsing.py
tests/: test2.py  test_test.py
tests/fixtures/: diff.txt  file2.yml  jsonn.json  nested_test.txt
