[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
repository = "https://github.com/bestolkovy/python-project-49.git"
description = "Hexlet. Second project"
authors = ["vito <vbykov@inbox.ru>"]
readme = "README.md"

packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
