[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
repository = "https://github.com/bestolkovy/python-project-49.git"
description = "Hexlet. Second project"
authors = ["vito <vbykov@inbox.ru>"]
readme = "README.md"

packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.10"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
